# transplant

./: Cargo.toml
src/: main.rs
tests/fixtures/backtrack_once/: source.txt  target.txt
tests/fixtures/none/: source.txt
tests/fixtures/once/: source.txt
tests/fixtures/simple/: target.txt
tests/fixtures/twice/: source.txt  target.txt
