[package]
name = "transplant"
version = "0.2.1-alpha.0"
authors = ["Loïc Grobol <loic.grobol@gmail.com>"]
edition = "2018"
description = "A fast, out-of-place, out-of-memory search and replace for very large files"
license = "MIT"
homepage = "https://github.com/LoicGrobol/transplant"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7.6"
